--- a/test.ipynb
+++ b/test.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "load_ext sql"
+    "load_ext\n",
+    "sql"
    ]
   },
   {
@@ -15,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql postgresql://student:student@127.0.0.1/sparkifydb"
+    "% sql postgresql: // student:student @ 127.0.0.1 / sparkifydb"
    ]
   },
   {
@@ -24,7 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql SELECT * FROM songplays LIMIT 5;"
+    "% sql SELECT * FROM songplays LIMIT 5;"
    ]
   },
   {
@@ -33,7 +34,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql SELECT * FROM users LIMIT 5;"
+    "% sql SELECT * FROM users LIMIT 5;"
    ]
   },
   {
@@ -42,7 +43,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql SELECT * FROM songs LIMIT 5;"
+    "% sql SELECT * FROM songs LIMIT 5;"
    ]
   },
   {
@@ -51,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql SELECT * FROM artists LIMIT 5;"
+    "% sql SELECT * FROM artists LIMIT 5;"
    ]
   },
   {
@@ -60,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%sql SELECT * FROM time LIMIT 5;"
+    "% sql SELECT * FROM time LIMIT 5;"
    ]
   },
   {
