Added Review Commit

--- a/etl.ipynb
+++ b/etl.ipynb
@@ -440,7 +440,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.9.10 (main, Sep 14 2022, 13:38:37) \n[Clang 13.1.6 (clang-1316.0.21.2.5)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "a262ac30a1c6f05c0ba457c890fc62fb3ef8970a6d891eb5391feb1cad7d6620"
+   }
   }
  },
  "nbformat": 4,
